<resources>
    <string name="app_name">SFU Gobbles</string>
    <string name="save_images">Save Images</string>
    <string name="start_game">Start Game</string>
    <string name="tic_tac_toe_background">tic tac toe background</string>
    <string name="player_x_s_turn">Player X\'s Turn</string>
    <string name="player_1_s_turn">Player 1\'s Turn</string>
    <string name="player_1_token">player 1 token</string>
    <string name="less_than"><![CDATA[<]]></string>
    <string name="player_2_token">player 2 token</string>
    <string name="image_view_for_the_board_pos">image view for the board pos</string>
    <string name="input_3_images_and_then_press_save_images">Input 3 images and then press \'SAVE IMAGES\'</string>
    <string name="cancel">Cancel</string>
    <string name="selected_img">selected img</string>
    <string name="winner">Winner</string>
    <string name="player_x">Player X</string>
    <string name="play_again">Play Again</string>
    <string name="by_ndaniel_nguyen_ndevin_dang_nzaid_arshad">By\nDaniel Nguyen\nDevin Dang\nZaid Arshad</string>
</resources>